@@ -1,7 +1,7 @@
 package ua.edu.ChaliyLukyanov.laba3.controller.servlets;
 
 import java.io.IOException;
-
+import javax.ejb.FinderException;
 import javax.servlet.RequestDispatcher;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServlet;
@@ -11,10 +11,9 @@ import javax.servlet.http.HttpServletResponse;
 import org.apache.log4j.Logger;
 
 import ua.edu.ChaliyLukyanov.laba3.model.Application;
-import ua.edu.ChaliyLukyanov.laba3.model.Component;
 import ua.edu.ChaliyLukyanov.laba3.model.NoSuchComponentException;
 import ua.edu.ChaliyLukyanov.laba3.model.ShopException;
-import ua.edu.ChaliyLukyanov.laba3.model.EJB.ComponentRemote;
+import ua.edu.ChaliyLukyanov.laba3.model.EJB.*;
 
 
 public class EditComponentServlet extends HttpServlet {
@@ -23,10 +22,10 @@ public class EditComponentServlet extends HttpServlet {
       
 
 	protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-		ComponentRemote model = (ComponentRemote) request.getAttribute(Application.COMPONENT_DAO);
+		ComponentHome compHome = (ComponentHome) request.getAttribute(Application.COMPONENT_DAO);
 		try {
-			int id = Integer.parseInt(request.getParameter("id"));
-			Component component = model.getComponentByID(id);
+			Integer id = new Integer(request.getParameter("id"));
+			Component component = compHome.findByPrimaryKey(id);
 			request.setAttribute("component", component);
 			RequestDispatcher dispatcher = request.getRequestDispatcher("/edit_component.jsp");
 			dispatcher.forward(request, response);			
@@ -36,23 +35,27 @@ public class EditComponentServlet extends HttpServlet {
 		} catch (NoSuchComponentException e){
 			logger.error(e);
 			throw new NoSuchComponentException(e.getMessage());
+		} catch (FinderException e) {
+			logger.error(e);
 		}
 	}
     
 	protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-		ComponentRemote model = (ComponentRemote) request.getAttribute(Application.COMPONENT_DAO);
+		ComponentHome compHome = (ComponentHome) request.getAttribute(Application.COMPONENT_DAO);
 		try {
-			String title = request.getParameter("title");
-			String description = request.getParameter("description");
-			String producer = request.getParameter("producer");
-			Double price = Double.valueOf(request.getParameter("price"));
-			int id = Integer.valueOf(request.getParameter("id_component"));
-			model.updateComponent(new Component(id, title, description, producer, 0, null, price));
+			Integer id = new Integer(request.getParameter("id_component"));
+			Component component = compHome.findByPrimaryKey(id);
+			component.setTitle(request.getParameter("title"));
+			component.setDescription(request.getParameter("description"));
+			component.setProducer(request.getParameter("producer"));
+			component.setPrice(Double.valueOf(request.getParameter("price")));
 			logger.info("Component " + id + " updates");
 			response.sendRedirect(request.getContextPath() + "/showcomponent?id=" + id);
 		} catch (ShopException e) {
 			logger.error(e);
 			throw new ShopException(e.getMessage());
+		} catch (FinderException e) {
+			logger.error(e);
 		}
 	}
 
